admin API 연결 완료

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>likelionrecruit</title>
+    <meta
+      name="description"
+      content="멋쟁이사자처럼 서강대학교 14기 모집중 멋쟁이사자처럼 서강대학교는 전국 최대 규모의 IT 창업 동아리로, IT 분야에 대한 경험이 많 지 않더라도 누구나 도전할 수 있는 커뮤니티입니다."
+    />
     <link
       rel="stylesheet"
       as="style"
