[FIX] vercel api proxy 수정

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>멋쟁이사자처럼 서강대학교</title>
     <meta
       name="description"
-      content="멋쟁이사자처럼 서강대학교는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다. 이 과정에서 대면 교육 세션과 해커톤, 데모데이 등 다양한 활동을 통해 함께 배우고 도전하며 성장합니다."
+      content="멋쟁이사자처럼 서강대학교는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다."
     />
     <link
       rel="stylesheet"
