--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -9,6 +9,14 @@
       name="description"
       content="멋쟁이사자처럼 서강대학교는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다."
     />
+    <meta name="robots" content="index,follow" />
+    <meta property="og:title" content="멋쟁이사자처럼 서강대학교" />
+    <meta
+      property="og:description"
+      content="멋쟁이사자처럼 서강대학교는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://likelion14-sogang.co.kr/" />
     <link
       rel="stylesheet"
       as="style"
