[FIX] meta 태그 추가 #2

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://likelion14-sogang.co.kr/" />
+    <link rel="canonical" href="https://likelion14-sogang.co.kr/" />
     <link
       rel="stylesheet"
       as="style"
