[FIX] 홈 헤더 레이아웃 수정, ts 문법 에러 수정, 네이버 SEO 추가

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="naver-site-verification"
+      content="3f3849e34b21897aa7ae7b5f8a88a94cdbdfcdfa"
+    />
     <title>멋쟁이사자처럼 서강대학교</title>
     <meta
       name="description"
