--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="naver-site-verification"
@@ -11,13 +11,13 @@
     <title>멋쟁이사자처럼 서강대학교</title>
     <meta
       name="description"
-      content="멋쟁이사자처럼 서강대학교는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다."
+      content="멋쟁이사자처럼 서강대학교(멋사 서강대) 공식 웹사이트입니다. 멋사 서강대는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다."
     />
-    <meta name="robots" content="index,follow" />
+    <meta name="robots" content="index,nofollow" />
     <meta property="og:title" content="멋쟁이사자처럼 서강대학교" />
     <meta
       property="og:description"
-      content="멋쟁이사자처럼 서강대학교는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다."
+      content="멋쟁이사자처럼 서강대학교(멋사 서강대) 공식 웹사이트입니다. 멋쟁이사자처럼 서강대학교는 기초부터 심화까지, 아이디어를 실제 서비스로 만들어보는 경험을 하는 IT 창업 동아리입니다."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://likelion14-sogang.co.kr/" />
